--- a/index.html
+++ b/index.html
@@ -31,71 +31,37 @@
 <body>
 
      <div id="app">
-<!-- <div v-if="resume.profile">
 
-    {{ resume.profile.name}}
-</div> -->
-
-
-
-
-
-
-    <!-- <button v-on:click="getContent"> click </button> -->
-
-    <article  v-if="resume.profile" class="resume-wrapper text-center position-relative">
+        <article  v-if="resume.profile" class="resume-wrapper text-center position-relative">
 
 	    <div class="resume-wrapper-inner mx-auto text-left bg-white shadow-lg">
 
             <resume-header v-bind:profile="resume.profile"></resume-header>
 
-
-
-
             <div class="resume-body p-5">
-
                 <resume-description v-bind:resume="resume"></resume-description>
-
 
                 <div class="row">
                     <div class="col-lg-9">
-                        <section class="resume-section experience-section mb-5">
-                            <h2 class="resume-section-title text-uppercase font-weight-bold pb-3 mb-3">Work Experience</h2>
-                            <div class="resume-section-content">
-                                <div class="resume-timeline position-relative">
-                                    <article v-for="experience in resume.experience" class="resume-timeline-item position-relative pb-5">
+                        <resume-experience v-bind:resume="resume" ></resume-experience>
+                    </div>
+                    <div class="col-lg-3">
+                        <!-- todo-->
+                        <resume-education v-bind:resume="resume" ></resume-education>
 
-                                        <div class="resume-timeline-item-header mb-2">
-                                            <div class="d-flex flex-column flex-md-row">
-                                                <h3 class="resume-position-title font-weight-bold mb-1">{{experience.role}}</h3>
-                                                <div class="resume-company-name ml-auto">{{experience.where}}</div>
-                                            </div><!--//row-->
-                                            <div class="resume-position-time">{{experience.period}}</div>
-                                        </div><!--//resume-timeline-item-header-->
-                                        <div class="resume-timeline-item-desc">
-                                            <p>{{experience.description}}</p>
-                                            <div v-if="experience.achievements">
-                                                <h4 class="resume-timeline-item-desc-heading font-weight-bold">Achievements:</h4>
-                                                <p>{{experience.achievements.description}}</p>
-                                                <ul>
-                                                    <li v-for="detail in experience.achievements.details">{{detail}}</li>
-                                                </ul>
-                                            </div>
-                                            <h4 class="resume-timeline-item-desc-heading font-weight-bold">Technologies used:</h4>
-                                            <ul class="list-inline">
-                                                <li v-for="technologies in experience.technologies" class="list-inline-item"><span class="badge badge-primary badge-pill">{{technologies}}</span></li>
-                                            </ul>
-                                        </div><!--//resume-timeline-item-desc-->
+                        <resume-skills v-bind:resume="resume" ></resume-skills>
 
-                                    </article><!--//resume-timeline-item-->
-                                </div>
-                            </div>
-                        </section>
+
+                        <!-- todo-->
+                        <resume-languages v-bind:resume="resume" ></resume-languages>
+
+                        <!-- todo-->
+                        <resume-interests v-bind:resume="resume" ></resume-interests>
                     </div>
 
-
-
                 </div>
+
+
 
         </div>
     </article>
@@ -107,6 +73,11 @@
 <script src="scripts/main.js"></script>
 <script src="scripts/resume-header.js"></script>
 <script src="scripts/resume-description.js"></script>
+<script src="scripts/resume-experience.js"></script>
+<script src="scripts/resume-skills.js"></script>
+<script src="scripts/resume-education.js"></script>
+<script src="scripts/resume-languages.js"></script>
+<script src="scripts/resume-interests.js"></script>
 
 
 </html>
