--- a/index.html
+++ b/index.html
@@ -46,16 +46,15 @@
                         <resume-experience v-bind:resume="resume" ></resume-experience>
                     </div>
                     <div class="col-lg-3">
-                        <!-- todo-->
+
                         <resume-education v-bind:resume="resume" ></resume-education>
+
+                        <resume-awards v-bind:resume="resume" ></resume-awards>
 
                         <resume-skills v-bind:resume="resume" ></resume-skills>
 
-
-                        <!-- todo-->
                         <resume-languages v-bind:resume="resume" ></resume-languages>
 
-                        <!-- todo-->
                         <resume-interests v-bind:resume="resume" ></resume-interests>
                     </div>
 
@@ -78,6 +77,7 @@
 <script src="scripts/resume-education.js"></script>
 <script src="scripts/resume-languages.js"></script>
 <script src="scripts/resume-interests.js"></script>
+<script src="scripts/resume-awards.js"></script>
 
 
 </html>
