--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Responsive Resume Template">
-    <meta name="author" content="Xiaoying Riley at 3rd Wave Media">
-    <link rel="shortcut icon" href="favicon.ico">
+    <meta name="description" content="Currículo Eduardo S. Sampaio">
+    <meta name="author" content="Eduardo S. Sampaio">
+    <link rel="shortcut icon" href="favicon.png">
 
     <!-- Google Font -->
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,900" rel="stylesheet">
@@ -67,7 +67,13 @@
 
 
 
+
 </div>
+<footer class="footer text-center pt-2 pb-5">
+    <!--/* This template is free as long as you keep the footer attribution link. If you'd like to use the template without the attribution link, you can buy the commercial license via our website: themes.3rdwavemedia.com Thank you for your support. :) */-->
+    <small class="copyright">Designed with <i class="fas fa-heart"></i> by <a href="http://themes.3rdwavemedia.com" target="_blank">Xiaoying Riley</a> for developers</small>
+</footer>
+
 </body>
 <script src="scripts/main.js"></script>
 <script src="scripts/resume-header.js"></script>
